force-app/main/default/objects/Objective_status__c/Objective_status__c.object-meta.xml
<CustomObject>
    <label>Objective status</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objective statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>