force-app/main/default/objects/Objective_status__c/fields/Anterior_Chamber_Angle_Left__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Chamber_Angle_Left__c</fullName>
    <inlineHelpText>Угол передней камеры левый глаз</inlineHelpText>
    <label>Anterior Chamber Angle Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>