force-app/main/default/objects/Objective_status__c/fields/Anterior_Chamber_Angle_Right__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Chamber_Angle_Right__c</fullName>
    <inlineHelpText>Угол передней камеры правый глаз</inlineHelpText>
    <label>Anterior Chamber Angle Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>