force-app/main/default/objects/Objective_status__c/fields/Anterior_Chamber_Left__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Chamber_Left__c</fullName>
    <inlineHelpText>Передняя камера статус</inlineHelpText>
    <label>Anterior Chamber Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>