force-app/main/default/objects/Objective_status__c/fields/Anterior_Chamber_Right__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Chamber_Right__c</fullName>
    <inlineHelpText>Передняя камера</inlineHelpText>
    <label>Anterior Chamber Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>