force-app/main/default/objects/Objective_status__c/fields/Anterior_Posterior_Axis_Left__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Posterior_Axis_Left__c</fullName>
    <inlineHelpText>Передне-задняя ось. Пример: 22,88 мм</inlineHelpText>
    <label>Anterior Posterior Axis Left</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>