force-app/main/default/objects/Objective_status__c/fields/Anterior_Posterior_Axis_Right__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Posterior_Axis_Right__c</fullName>
    <inlineHelpText>Передне-задняя ось правый глаз. Пример</inlineHelpText>
    <label>Anterior Posterior Axis Right</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>