force-app/main/default/objects/Objective_status__c/fields/Axys_Right_Cor__c.field-meta.xml
<CustomField>
    <fullName>Axys_Right_Cor__c</fullName>
    <inlineHelpText>Значение оси с коррекцией, правый глаз. Пример: 180</inlineHelpText>
    <label>Axys Right (Cor)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>