force-app/main/default/objects/Objective_status__c/fields/Central_Corneal_Thickness_Left__c.field-meta.xml
<CustomField>
    <fullName>Central_Corneal_Thickness_Left__c</fullName>
    <inlineHelpText>Центральная толщина роговицы левый глаз. Пример: 525 мкм</inlineHelpText>
    <label>Central Corneal Thickness Left</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>