force-app/main/default/objects/Objective_status__c/fields/Central_Corneal_Thickness_Right__c.field-meta.xml
<CustomField>
    <fullName>Central_Corneal_Thickness_Right__c</fullName>
    <inlineHelpText>Центральная толщина роговицы правый глаз. Пример: 525 мкм</inlineHelpText>
    <label>Central Corneal Thickness Right</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>