force-app/main/default/objects/Objective_status__c/fields/Conjunctiva_Left__c.field-meta.xml
<CustomField>
    <fullName>Conjunctiva_Left__c</fullName>
    <description>{Id;Id}</description>
    <inlineHelpText>Конъюнктива плевого глаза - статус</inlineHelpText>
    <label>Conjunctiva Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>