force-app/main/default/objects/Objective_status__c/fields/Conjunctiva_Right__c.field-meta.xml
<CustomField>
    <fullName>Conjunctiva_Right__c</fullName>
    <description>{Id;Id}</description>
    <inlineHelpText>Конъюнктива правгого глаза - статус</inlineHelpText>
    <label>Conjunctiva Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>