force-app/main/default/objects/Objective_status__c/fields/Cornea_Left__c.field-meta.xml
<CustomField>
    <fullName>Cornea_Left__c</fullName>
    <description>{Id%description;Id%description}</description>
    <inlineHelpText>Роговица левого глаза - статус</inlineHelpText>
    <label>Cornea Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>