force-app/main/default/objects/Objective_status__c/fields/Cornea_Right__c.field-meta.xml
<CustomField>
    <fullName>Cornea_Right__c</fullName>
    <description>{Id%description;Id%description}</description>
    <inlineHelpText>Роговица правого глаза - статус</inlineHelpText>
    <label>Cornea Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>