force-app/main/default/objects/Objective_status__c/fields/Cylinder_Right_Cor__c.field-meta.xml
<CustomField>
    <fullName>Cylinder_Right_Cor__c</fullName>
    <inlineHelpText>Значение цилиндра с коррекцией, правый глаз. Пример: +1,25</inlineHelpText>
    <label>Cylinder Right (Cor)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>