force-app/main/default/objects/Objective_status__c/fields/Eye_Lens_Left__c.field-meta.xml
<CustomField>
    <fullName>Eye_Lens_Left__c</fullName>
    <inlineHelpText>Хрусталик левого глаза</inlineHelpText>
    <label>Eye Lens Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>