force-app/main/default/objects/Objective_status__c/fields/Eye_Lens_Right__c.field-meta.xml
<CustomField>
    <fullName>Eye_Lens_Right__c</fullName>
    <inlineHelpText>Хрусталик правого глаза</inlineHelpText>
    <label>Eye Lens Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>