force-app/main/default/objects/Objective_status__c/fields/Eye_Position_Left__c.field-meta.xml
<CustomField>
    <fullName>Eye_Position_Left__c</fullName>
    <inlineHelpText>Положение левого глаза - статус</inlineHelpText>
    <label>Eye Position Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>