force-app/main/default/objects/Objective_status__c/fields/Eye_Position_Right__c.field-meta.xml
<CustomField>
    <fullName>Eye_Position_Right__c</fullName>
    <inlineHelpText>Положение правого глаза - статус</inlineHelpText>
    <label>Eye Position Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>