force-app/main/default/objects/Objective_status__c/fields/Eyeground_Left__c.field-meta.xml
<CustomField>
    <fullName>Eyeground_Left__c</fullName>
    <inlineHelpText>Глазное дно левый глаз</inlineHelpText>
    <label>Eyeground Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>