force-app/main/default/objects/Objective_status__c/fields/Eyeground_Right__c.field-meta.xml
<CustomField>
    <fullName>Eyeground_Right__c</fullName>
    <inlineHelpText>Глазное дно правый глаз</inlineHelpText>
    <label>Eyeground Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>