force-app/main/default/objects/Objective_status__c/fields/Eyelid_Left__c.field-meta.xml
<CustomField>
    <fullName>Eyelid_Left__c</fullName>
    <description>{Id;Id}</description>
    <inlineHelpText>Веко левого глаза - статус.</inlineHelpText>
    <label>Eyelid Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>