force-app/main/default/objects/Objective_status__c/fields/Eyelid_Right__c.field-meta.xml
<CustomField>
    <fullName>Eyelid_Right__c</fullName>
    <description>{Id;Id}</description>
    <inlineHelpText>Веко правого глаза - статус</inlineHelpText>
    <label>Eyelid Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>