force-app/main/default/objects/Objective_status__c/fields/Inner_Eye_Pressure_Left__c.field-meta.xml
<CustomField>
    <fullName>Inner_Eye_Pressure_Left__c</fullName>
    <inlineHelpText>ВГД левый глаз. Пример: 15</inlineHelpText>
    <label>Inner Eye Pressure Left</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>