force-app/main/default/objects/Objective_status__c/fields/Inner_Eye_Pressure_Right__c.field-meta.xml
<CustomField>
    <fullName>Inner_Eye_Pressure_Right__c</fullName>
    <inlineHelpText>ВГД правый глаз. Пример:15</inlineHelpText>
    <label>Inner Eye Pressure Right</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>