force-app/main/default/objects/Objective_status__c/fields/Iris_Left__c.field-meta.xml
<CustomField>
    <fullName>Iris_Left__c</fullName>
    <inlineHelpText>Радужка,зрачок левый глаз</inlineHelpText>
    <label>Iris Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>