force-app/main/default/objects/Objective_status__c/fields/Iris_Right__c.field-meta.xml
<CustomField>
    <fullName>Iris_Right__c</fullName>
    <inlineHelpText>Роговица, зрачок правый глаз</inlineHelpText>
    <label>Iris Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>