force-app/main/default/objects/Objective_status__c/fields/Show_visus_correction_left__c.field-meta.xml
<CustomField>
    <fullName>Show_visus_correction_left__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Если выбрано будет отображаться секция с коррекцией</description>
    <label>Show visus correction left</label>
    <type>Checkbox</type>
</CustomField>