force-app/main/default/objects/Objective_status__c/fields/Show_visus_correction_right__c.field-meta.xml
<CustomField>
    <fullName>Show_visus_correction_right__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show visus correction right</label>
    <type>Checkbox</type>
</CustomField>