force-app/main/default/objects/Objective_status__c/fields/Sphere_Left_Cor__c.field-meta.xml
<CustomField>
    <fullName>Sphere_Left_Cor__c</fullName>
    <inlineHelpText>Значение сферы с коррекцией, левый глаз. Пример: +1,25</inlineHelpText>
    <label>Sphere Left (Cor)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>