force-app/main/default/objects/Objective_status__c/fields/Sphere_Right_Cor__c.field-meta.xml
<CustomField>
    <fullName>Sphere_Right_Cor__c</fullName>
    <inlineHelpText>Значение сферы правого глаза с коррекцией. Пример: +1,25</inlineHelpText>
    <label>Sphere Right (Cor)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>