force-app/main/default/objects/Objective_status__c/fields/Visus_Left_Cor__c.field-meta.xml
<CustomField>
    <fullName>Visus_Left_Cor__c</fullName>
    <inlineHelpText>Визус после коррекции левый глаз</inlineHelpText>
    <label>Visus Left (Cor)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visus_values</valueSetName>
    </valueSet>
</CustomField>