force-app/main/default/objects/Objective_status__c/fields/Visus_Right_Cor__c.field-meta.xml
<CustomField>
    <fullName>Visus_Right_Cor__c</fullName>
    <label>Visus Right (Cor)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visus_values</valueSetName>
    </valueSet>
</CustomField>