force-app/main/default/objects/Objective_status__c/fields/Visus_Right_Eye__c.field-meta.xml
<CustomField>
    <fullName>Visus_Right_Eye__c</fullName>
    <label>Visus Right Eye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visus</valueSetName>
    </valueSet>
</CustomField>