force-app/main/default/objects/Objective_status__c/fields/Vitreous_Left__c.field-meta.xml
<CustomField>
    <fullName>Vitreous_Left__c</fullName>
    <inlineHelpText>Стекловидное тело левый глаз</inlineHelpText>
    <label>Vitreous Left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>