force-app/main/default/objects/Objective_status__c/fields/Vitreous_Right__c.field-meta.xml
<CustomField>
    <fullName>Vitreous_Right__c</fullName>
    <inlineHelpText>Стекловидное тело правый глаз</inlineHelpText>
    <label>Vitreous Right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>